--- a/public/index.html
+++ b/public/index.html
@@ -5,11 +5,17 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <meta name="description" content="Get the moonrise time, sunset time, and moon phase for your location. Find out what time the moon will rise and set, and track the phase of the moon throughout the month.">
+    <meta name="keywords" content="moonrise time, sunset time, moon phase, current location">
+    <meta name="author" content="David Sullivan for Dover Summit">
+    <meta name="robots" content="index, follow">
+    <meta property="og:title" content="Moonrise and Sunset Time Calculator">
+    <meta property="og:description" content="Get the moonrise time, sunset time, and moon phase for your location. Find out what time the moon will rise and set, and track the phase of the moon throughout the month.">
+    <meta property="og:url" content="https://moonrise.doversummit.dev">
+    <meta property="og:type" content="website">
+    <meta property="og:site_name" content="Moonrise">
+    <meta property="og:locale" content="en_US">    
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/apple-touch-icon.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1011116420414112" crossorigin="anonymous"></script>
     <title>Moon Rise</title>
